# simulator_swimming

./: README.md
Untitled Folder/: Untitled Document  cam_iris.sdf  custom_sitl.launch  iris2  iris2.sdf  iris_camera.sdf
icsl_simulator/amazing_mavros/: CMakeLists.txt  package.xml
icsl_simulator/amazing_mavros/launch/: amazing.launch  two_amazing.launch
icsl_simulator/amazing_mavros/src/: amazing.cpp  fascinating.cpp
icsl_simulator/fucking_mavros/: CMakeLists.txt  package.xml
icsl_simulator/fucking_mavros/launch/: fuck.launch
icsl_simulator/modudculab_ros/launch/: ctrl_pos_gazebo.launch
icsl_simulator/solar_sys_formation-master/: CMakeLists.txt  README.md  package.xml
icsl_simulator/solar_sys_formation-master/launch/: solar_sys.launch  solar_sys_started.launch  test.launch
icsl_simulator/solar_sys_formation-master/msg/: msgCoordinate.msg
icsl_simulator/solar_sys_formation-master/src/: earth_node.cpp  moon_node.cpp  start_earth_node.cpp  start_moon_node.cpp
